--- a/Identity/nesting/templates/nesting/Identity_nest.html
+++ b/Identity/nesting/templates/nesting/Identity_nest.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 <!DOCTYPE html>
+
 <html>
 
     {% block head %}
@@ -24,8 +25,8 @@
         <ul class = "nav flex-column">
 
                          <li class = "nav-item"><a class = "nav-link" href = "{% url 'nesting:nesting'%}" ><small>Create  Identity </small></a></li>
-                         <!-- <li class = "nav-item"><a class = "nav-link" href = "#"><small>Update </small></a></li>
-                         <li class = "nav-item"><a class = "nav-link" href = "#"><small>Move to Trash</small> </a></li> -->
+                         <li class = "nav-item"><a class = "nav-link" href = "#"><small>Update </small></a></li>
+                         <li class = "nav-item"><a class = "nav-link" href = "#"><small>Move to Trash</small> </a></li>
           </ul>
 
       </nav>
