--- a/Identity/nesting/templates/nesting/Medical_History_nest.html
+++ b/Identity/nesting/templates/nesting/Medical_History_nest.html
@@ -27,9 +27,9 @@
 
 <ul class = "list-group list-group-flush">
 
-  <h3 class = "text-muted list-group-item"> {{ Symptom.Symptom_name }}</h3>
+  <h3 class = "text-muted list-group-item"> {{ Symptom.symptom_name }}</h3>
 
-      <p class = "list-group-item">{{ Symptom.Symptom_description }}</p>
+      <p class = "list-group-item">{{ Symptom.symptom_description }}</p>
 
     </ul>
           </div>
