--- a/Identity/nesting/templates/nesting/Symptoms_list.html
+++ b/Identity/nesting/templates/nesting/Symptoms_list.html
@@ -62,15 +62,15 @@
 
       <div class = "form-group">
 
-        {{form.Symptom_name.errors}}
-        {{form.Symptom_name}}
+        {{form.symptom_name.errors}}
+        {{form.symptom_name}}
 
       </div>
 
     <div class = "form-group">
 
-      {{form.Symptom_description.errors}}
-      {{form.Symptom_description}}
+      {{form.symptom_description.errors}}
+      {{form.symptom_description}}
 
     </div>
 
