include update view of identity_nest.

--- a/Identity/Identities/templates/base.html
+++ b/Identity/Identities/templates/base.html
@@ -33,8 +33,8 @@
 			<ul class = "nav navbar-nav flex-row float-left ">
 		        <li class="nav-item"> <a class="nav-link font-weight-bold" style = "font-family: Optima" href = "{% url 'nesting:nesting'%}">  Creator :  {{ user.first_name}} {{ user.last_name}}</a></li>
 						<li class = "nav-item "><a class = "nav-link" href = "{% url 'Identities:logout'%}">Sign Out</a></li>
-						<!-- <li class = "nav-item"><a class = "nav-link" href = "{% url 'Identities:view_profile' %}">view Identity </a></li> -->
- 						<!-- <li class = "nav-item"><a class = "nav-link" href = "{% url 'Identities:edit_profile' %}">edit Identity </a></li> -->
+						<li class = "nav-item"><a class = "nav-link" href = "{% url 'Identities:view_profile' %}">view Identity </a></li>
+ 						 <li class = "nav-item"><a class = "nav-link" href = "{% url 'Identities:edit_profile' %}">edit Identity </a></li>
 
 								<!-- <li class = "nav-item "><a class = "nav-link" href = "{% url 'Identities:change_password'%}">Change password</a></li> -->
 
