--- a/Identity/nesting/templates/nesting/Medical_History_nest.html
+++ b/Identity/nesting/templates/nesting/Medical_History_nest.html
@@ -31,6 +31,8 @@
 
       <p class = "list-group-item">{{ Symptom.symptom_description }}</p>
 
+      <p class="list-group-item"><small class="text-muted"> Created ON: {{ Symptom.time_record }}</small></p>
+
     </ul>
           </div>
 {% endfor %}
