--- a/Identity/nesting/templates/nesting/Identity_nest.html
+++ b/Identity/nesting/templates/nesting/Identity_nest.html
@@ -45,7 +45,7 @@
               <li class = "list-group-item"><p> <small>Contact: {{ Identity.contact}}</small></p></a></li>
               <li class = "list-group-item"><p> <small>Birthday: {{ Identity.date_of_birth}}</small></p></a></li>
               <li class = "list-group-item"><a class = "nav-link" href = "{%url 'nesting:Symptoms_nest_list' Identity.pk %}" ><small>Create Medical State </small></a></li>
-              <li class = "list-group-item"><a class = "nav-link" href = "{% url 'nesting:Identity_unique_view_update' Identity.get_absolute_url %}"><small>Update </small></a></li>
+              <li class = "list-group-item"><a class = "nav-link" href = "{%url 'nesting:Identity_nest_list'  Identity.get_absolute_url %}"><small>Update </small></a></li>
             </ul>
     </div>
           {% endfor %}
